--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.18",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "livewire": "^0.6.1",
+        "tailwind": "^4.0.0"
     }
 }
