--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "daisyui": "^5.3.10",
+        "daisyui": "^5.5.4",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.18",
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "livewire": "^0.6.1",
-        "tailwind": "^4.0.0"
+        "livewire": "^0.6.1"
     }
 }
