--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.6",
+        "midtrans/midtrans-php": "^2.6",
         "predis/predis": "^3.2"
     },
     "require-dev": {
